--- a/app/src/main/res/layout/question_item.xml
+++ b/app/src/main/res/layout/question_item.xml
@@ -6,19 +6,17 @@
     android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/cv_main_holder"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="10dp"
-        android:layout_marginVertical="10dp"
         android:outlineSpotShadowColor="@color/transparent"
-        app:cardCornerRadius="5dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#FFFFFF"
+            android:background="#F7F7F7"
             android:padding="10dp">
 
             <androidx.cardview.widget.CardView
@@ -42,52 +40,54 @@
 
             <TextView
                 android:id="@+id/username_question"
-                android:layout_width="70dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+                android:layout_marginLeft="15dp"
                 android:ellipsize="end"
                 android:gravity="center"
                 android:singleLine="true"
-                android:text="username"
-                android:textColor="@color/gray"
-                android:textSize="10sp"
+                android:text="username · "
+                android:textColor="#0F1419"
+                android:textSize="15sp"
                 android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="@+id/cv_question"
-                app:layout_constraintStart_toStartOf="@+id/cv_question"
-                app:layout_constraintTop_toBottomOf="@+id/cv_question" />
+                app:layout_constraintStart_toEndOf="@+id/cv_question"
+                app:layout_constraintTop_toTopOf="@+id/cv_question" />
 
             <TextView
                 android:id="@+id/title_question"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="15dp"
+                android:layout_marginTop="8dp"
                 android:text="Is that possible to do Typescript generic interface with Gatsby Typegen Queries?"
-                android:textColor="@color/black"
-                android:textStyle="bold"
+                android:textColor="#0F1419"
+                android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/cv_question"
-                app:layout_constraintTop_toTopOf="@+id/cv_question" />
+                app:layout_constraintStart_toStartOf="@+id/username_question"
+                app:layout_constraintTop_toBottomOf="@+id/username_question" />
 
             <TextView
                 android:id="@+id/textview_times_ago_question"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="10dp"
-                android:text="times ago"
-                android:textColor="@color/gray"
-                android:textSize="12sp"
-                app:layout_constraintEnd_toEndOf="@+id/title_question"
-                app:layout_constraintTop_toBottomOf="@+id/title_question" />
+                android:text="1s"
+                android:textColor="#677680"
+                android:textSize="15sp"
+                app:layout_constraintBottom_toBottomOf="@+id/username_question"
+                app:layout_constraintStart_toEndOf="@+id/username_question"
+                app:layout_constraintTop_toTopOf="@+id/username_question" />
 
-            <LinearLayout
-                android:id="@+id/chip_tag_holder"
+            <TextView
+                android:id="@+id/textview_tag_holder"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="15dp"
-                android:orientation="vertical"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/cv_question"
-                app:layout_constraintTop_toBottomOf="@+id/textview_times_ago_question" />
+                android:layout_marginTop="5dp"
+                android:text="#hello #kotlin #google-cloud"
+                android:textColor="#1D9BF0"
+                android:textSize="16sp"
+                app:layout_constraintEnd_toEndOf="@+id/title_question"
+                app:layout_constraintStart_toStartOf="@+id/title_question"
+                app:layout_constraintTop_toBottomOf="@+id/title_question" />
+
 
             <ImageView
                 android:id="@+id/imageView2"
@@ -95,8 +95,8 @@
                 android:layout_height="20dp"
                 android:layout_marginLeft="30dp"
                 android:background="@drawable/baseline_recommend_24"
-                app:layout_constraintStart_toStartOf="@+id/chip_tag_holder"
-                app:layout_constraintTop_toBottomOf="@+id/chip_tag_holder" />
+                app:layout_constraintStart_toStartOf="@+id/textview_tag_holder"
+                app:layout_constraintTop_toBottomOf="@+id/textview_tag_holder" />
 
             <TextView
                 android:id="@+id/score_question"
@@ -116,7 +116,7 @@
                 android:background="@drawable/baseline_comment_24"
                 app:layout_constraintEnd_toStartOf="@+id/imageView3"
                 app:layout_constraintStart_toEndOf="@+id/imageView2"
-                app:layout_constraintTop_toBottomOf="@+id/chip_tag_holder" />
+                app:layout_constraintTop_toBottomOf="@+id/textview_tag_holder" />
 
             <TextView
                 android:id="@+id/answer_count_question"
@@ -135,8 +135,8 @@
                 android:layout_height="20dp"
                 android:layout_marginRight="30dp"
                 android:background="@drawable/baseline_remove_red_eye_24"
-                app:layout_constraintEnd_toEndOf="@+id/chip_tag_holder"
-                app:layout_constraintTop_toBottomOf="@+id/chip_tag_holder" />
+                app:layout_constraintEnd_toEndOf="@+id/textview_tag_holder"
+                app:layout_constraintTop_toBottomOf="@+id/textview_tag_holder" />
 
 
             <TextView
@@ -152,5 +152,11 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:background="#EFF3F4"
+        app:layout_constraintTop_toBottomOf="@id/cv_main_holder" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
