--- a/app/src/main/res/layout/question_item.xml
+++ b/app/src/main/res/layout/question_item.xml
@@ -94,6 +94,7 @@
                 android:layout_width="20dp"
                 android:layout_height="20dp"
                 android:layout_marginLeft="30dp"
+                android:layout_marginTop="10dp"
                 android:background="@drawable/baseline_recommend_24"
                 app:layout_constraintStart_toStartOf="@+id/textview_tag_holder"
                 app:layout_constraintTop_toBottomOf="@+id/textview_tag_holder" />
@@ -113,6 +114,7 @@
                 android:id="@+id/imageView4"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
+                android:layout_marginTop="10dp"
                 android:background="@drawable/baseline_comment_24"
                 app:layout_constraintEnd_toStartOf="@+id/imageView3"
                 app:layout_constraintStart_toEndOf="@+id/imageView2"
@@ -133,6 +135,7 @@
                 android:id="@+id/imageView3"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
+                android:layout_marginTop="10dp"
                 android:layout_marginRight="30dp"
                 android:background="@drawable/baseline_remove_red_eye_24"
                 app:layout_constraintEnd_toEndOf="@+id/textview_tag_holder"
