--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -42,9 +42,8 @@
         android:id="@+id/view"
         android:layout_width="match_parent"
         android:layout_height="2dp"
-        android:layout_marginTop="10dp"
         android:background="#EFF3F4"
-        app:layout_constraintTop_toBottomOf="@id/et_search" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_filter" />
 
     <TextView
         android:id="@+id/textView"
@@ -70,5 +69,19 @@
         app:layout_constraintTop_toBottomOf="@+id/view"
         tools:listitem="@layout/question_item" />
 
+    <Button
+        android:id="@+id/btn_filter"
+        android:layout_width="wrap_content"
+        android:layout_height="35dp"
+        android:backgroundTint="#F7F7F7"
+        android:drawableLeft="@drawable/baseline_filter_list_24"
+        android:drawableTint="@color/black"
+        android:gravity="center_vertical"
+        android:paddingHorizontal="20dp"
+        android:paddingVertical="0dp"
+        android:text="FILTER TAGS"
+        android:textColor="@color/black"
+        app:layout_constraintStart_toStartOf="@+id/et_search"
+        app:layout_constraintTop_toBottomOf="@+id/et_search" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
