--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -15,6 +15,8 @@
         android:layout_marginVertical="10dp"
         android:background="@drawable/search_edit_text_background"
         android:hint="Type your question"
+        android:imeOptions="actionDone"
+        android:inputType="text"
         android:paddingHorizontal="10dp"
         android:paddingVertical="12dp"
         android:textColor="@android:color/black"
