--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="black">#FF000000</color>
     <color name="gray">#505050</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="trans_black">#6F000000</color>
+    <color name="trans_white">#90FFFFFF</color>
 </resources>
