--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
     <color name="trans_white">#90FFFFFF</color>
     <color name="brand_green">#B6D6CC</color>
     <color name="brand_blue">#74A4BC</color>
-    <color name="brand_status">#8EC2DC</color>
+    <color name="brand_light_blue">#8EC2DC</color>
     <color name="brand_purple">#29339B</color>
     <color name="brand_orange">#FF3A20</color>
 </resources>
