--- a/app/src/main/res/drawable/bottom_navigation_background.xml
+++ b/app/src/main/res/drawable/bottom_navigation_background.xml
@@ -1,10 +1,14 @@
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-    <gradient
-        android:startColor="@color/brand_green"
-        android:endColor="@color/brand_green"
-        android:angle="90" />
-    <corners
-        android:topLeftRadius="35dp"
-        android:topRightRadius="35dp" />
-</shape>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item>
+        <shape android:shape="rectangle">
+            <solid android:color="@android:color/transparent" />
+        </shape>
+    </item>
+    <item>
+        <shape android:shape="rectangle">
+            <solid android:color="@color/brand_green" />
+            <corners android:topLeftRadius="20dp"
+                android:topRightRadius="20dp" />
+        </shape>
+    </item>
+</layer-list>
