--- a/app/src/main/res/layout/question_item.xml
+++ b/app/src/main/res/layout/question_item.xml
@@ -90,56 +90,29 @@
                 app:layout_constraintTop_toBottomOf="@+id/title_question" />
 
 
-            <ImageView
-                android:id="@+id/imageView2"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:layout_marginLeft="30dp"
-                android:layout_marginTop="10dp"
-                android:background="@drawable/baseline_recommend_24"
-                app:layout_constraintStart_toStartOf="@+id/textview_tag_holder"
-                app:layout_constraintTop_toBottomOf="@+id/textview_tag_holder" />
-
             <TextView
                 android:id="@+id/score_question"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="10"
-                android:textColor="@color/black"
-                android:textSize="10sp"
-                app:layout_constraintEnd_toEndOf="@+id/imageView2"
-                app:layout_constraintStart_toStartOf="@+id/imageView2"
-                app:layout_constraintTop_toBottomOf="@+id/imageView2" />
-
-            <ImageView
-                android:id="@+id/imageView4"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:layout_marginTop="10dp"
-                android:background="@drawable/baseline_comment_24"
-                app:layout_constraintEnd_toStartOf="@+id/imageView3"
-                app:layout_constraintStart_toEndOf="@+id/imageView2"
+                android:layout_marginVertical="10dp"
+                android:layout_marginLeft="20dp"
+                android:text="10 votes"
+                android:textColor="#677680"
+                android:textSize="12sp"
+                app:layout_constraintStart_toStartOf="@+id/textview_tag_holder"
                 app:layout_constraintTop_toBottomOf="@+id/textview_tag_holder" />
+
 
             <TextView
                 android:id="@+id/answer_count_question"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="3"
-                android:textColor="@color/black"
-                android:textSize="10sp"
-                app:layout_constraintEnd_toEndOf="@+id/imageView4"
-                app:layout_constraintStart_toStartOf="@+id/imageView4"
-                app:layout_constraintTop_toBottomOf="@+id/imageView4" />
-
-            <ImageView
-                android:id="@+id/imageView3"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginRight="30dp"
-                android:background="@drawable/baseline_remove_red_eye_24"
+                android:layout_marginVertical="10dp"
+                android:text="3 answers"
+                android:textColor="#677680"
+                android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="@+id/textview_tag_holder"
+                app:layout_constraintStart_toStartOf="@+id/textview_tag_holder"
                 app:layout_constraintTop_toBottomOf="@+id/textview_tag_holder" />
 
 
@@ -147,12 +120,13 @@
                 android:id="@+id/view_count_question"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="35"
-                android:textColor="@color/black"
-                android:textSize="10sp"
-                app:layout_constraintEnd_toEndOf="@+id/imageView3"
-                app:layout_constraintStart_toStartOf="@+id/imageView3"
-                app:layout_constraintTop_toBottomOf="@+id/imageView3" />
+                android:layout_marginVertical="10dp"
+                android:layout_marginRight="20dp"
+                android:text="35 views"
+                android:textColor="#677680"
+                android:textSize="12sp"
+                app:layout_constraintEnd_toEndOf="@+id/textview_tag_holder"
+                app:layout_constraintTop_toBottomOf="@id/textview_tag_holder" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
